modify poly  to static